--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -84,7 +85,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
 allow 109.70.100.3;
@@ -202,7 +202,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.134.37;
+allow 177.149.157.251;
 allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
@@ -707,6 +707,9 @@ allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
 allow 2001:67c:e28:1::103;
+allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
 allow 2001:67c:e60:c0c:192:42:116:175;
@@ -1007,6 +1010,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1189,7 +1193,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
-allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:2d:ea47::1;
@@ -1876,6 +1879,9 @@ allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
 allow 64.190.76.13;
+allow 64.190.76.2;
+allow 64.190.76.3;
+allow 64.190.76.4;
 allow 64.94.85.248;
 allow 65.87.7.22;
 allow 66.146.193.33;
@@ -1923,6 +1929,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
+allow 84.32.131.49;
 allow 85.239.41.130;
 allow 85.239.55.11;
 allow 85.239.55.110;
