--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -577,7 +578,6 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.237.221.228;
@@ -1008,6 +1008,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1510,6 +1511,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1539,7 +1541,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b190:21e6:40ba:73e1;
@@ -1965,6 +1966,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -2024,6 +2026,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
