--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -103,6 +103,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -238,7 +239,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -477,11 +477,9 @@ allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
-allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
-allow 185.40.4.20;
 allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
@@ -578,9 +576,9 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
-allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
 allow 193.26.115.212;
@@ -749,6 +747,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -903,7 +902,6 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -966,7 +964,6 @@ allow 2600:3c07::f03c:95ff:fe1e:22e;
 allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:69ed::1;
 allow 2602:f6f6:2:ad5c::1;
@@ -1245,7 +1242,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1275,7 +1271,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1488,10 +1483,8 @@ allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
-allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
-allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1541,6 +1534,7 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b190:21e6:40ba:73e1;
@@ -1834,7 +1828,6 @@ allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.253.247.27;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1869,7 +1862,6 @@ allow 5.45.98.162;
 allow 57.128.220.107;
 allow 57.129.91.235;
 allow 5.79.66.19;
-allow 5.8.18.99;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1966,7 +1958,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
