--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -103,6 +103,7 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 118.194.234.240;
@@ -238,7 +239,6 @@ deny 185.100.87.166;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -477,11 +477,9 @@ deny 185.39.207.83;
 deny 185.40.4.100;
 deny 185.40.4.101;
 deny 185.40.4.121;
-deny 185.40.4.127;
 deny 185.40.4.132;
 deny 185.40.4.149;
 deny 185.40.4.150;
-deny 185.40.4.20;
 deny 185.40.4.22;
 deny 185.40.4.29;
 deny 185.40.4.38;
@@ -578,9 +576,9 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.218.118.91;
-deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.140;
 deny 193.26.115.212;
@@ -749,6 +747,7 @@ deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:7826::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -903,7 +902,6 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.151.8.8;
-deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -966,7 +964,6 @@ deny 2600:3c07::f03c:95ff:fe1e:22e;
 deny 2600:3c0a::f03c:95ff:fe1e:2a6;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:69ed::1;
 deny 2602:f6f6:2:ad5c::1;
@@ -1245,7 +1242,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1275,7 +1271,6 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1488,10 +1483,8 @@ deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
-deny 2a0e:4005:1002:ffff:185:40:4:127;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
 deny 2a0e:4005:1002:ffff:185:40:4:149;
-deny 2a0e:4005:1002:ffff:185:40:4:20;
 deny 2a0e:4005:1002:ffff:185:40:4:22;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1541,6 +1534,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b190:21e6:40ba:73e1;
@@ -1834,7 +1828,6 @@ deny 5.196.95.34;
 deny 5.230.119.146;
 deny 5.253.247.27;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1869,7 +1862,6 @@ deny 5.45.98.162;
 deny 57.128.220.107;
 deny 57.129.91.235;
 deny 5.79.66.19;
-deny 5.8.18.99;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
@@ -1966,7 +1958,6 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
